2000-11-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSClassDescription.m: New MacOS-X class added.
	* Headers/Foundation/NSClassDescription.m: New MacOS-X class added.
	* Headers/Foundation/NSKeyvalueCoding.m: New MacOS-X protocol added.
	* Source/NSObject.m: New MacOS-X key value coding methods added.
	Only objects currently supported - needs work to support scalar
	types too!

2000-11-23  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSBundle.m ([NSBundle +_addFrameworkFromClass:]): fixed an
	autorelease problem. (reported by Gerald Siebke <gerald@turbocat.de>)

2000-11-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: ([-connectToPort:beforeDate:]) added locking to
	prevent possible problems with two threads trying to get root object
	of a new connection at the same time.
	* Documentation/gsdoc/NSURLHandle.gsdoc: Added subclass information.

2000-11-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSAutoreleasePool.h: Changed proivate method
	for cleanup at end of thread.
	* Headers/gnustep/base/NSThead.h: New ivar to mark when we are
	deallocating.
	* Source/NSAutoreleasePool.m: Added parameter to _endThread so we
	can safely end a thread without it being the current one.
	* Source/NSThread.m: Now clean up autorelease pools *after*
	everything elese, while deallocating the thread.  This is to cope
	with objects that try to access the thread dictionary while
	autoreleasing. -threadDictionary modified to return nil during
	deallocation rather than creating a new ductionary.

2000-11-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/externs.m: Removed obsolete http body key.
	* Source/GSHTTPURLHandle.m: Removed obsolete http body key.
	* Headers/Foundation/NSURLHandle.h: Removed obsolete http body key.

2000-11-20  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSConnection.m: ([NSConnection -invalidate]) Fixed typo in
	multi-thread support.

2000-11-18  Richard Frith-Macdonald <rfm@gnu.org>
